--- a/config.json
+++ b/config.json
@@ -11,10 +11,10 @@
       {
           "layout": "bannerImage",
           "isSlider": true,
-          "showBackground": true,
-          "upHeight": 100.0,
-          "padding": 10.0,
-          "radius": 10.0,
+          "showBackground": false,
+          "upHeight": 50.0,
+          "padding": 0.0,
+          "radius": 0.0,
           "fontSize": 26.0,
           "items": [
             
