--- a/config.json
+++ b/config.json
@@ -11,7 +11,7 @@
       {
           "layout": "bannerImage",
           "isSlider": true,
-          "showBackground": false,
+          "showBackground": true,
           "upHeight": 15.0,
           "padding": 0.0,
           "radius": 6.0,
