--- a/config.json
+++ b/config.json
@@ -11,8 +11,8 @@
       {
           "layout": "bannerImage",
           "isSlider": true,
-          "showBackground": true,
-          "upHeight": 15.0,
+          "showBackground": false,
+          "upHeight": 0.0,
           "padding": 0.0,
           "radius": 6.0,
           "fontSize": 26.0,
